feat(version9): intégration complète backend/frontend + corrections bugs
Backend:
- Ajout endpoint GET /api/admin/stages/{id} manquant
- Ajout EncadrantEntrepriseController (POST /api/encadrants/creer, GET /api/entreprise/encadrants)
- Ajout EncadrantEntrepriseRepository
- Fix casts non sécurisés dans StageService (vérification role avant cast)
- Fix null-checks sur getCreateur() dans CandidatureService et StageService
- Ajout @Transactional sur CandidatureService.decider() et AdminService.creerDemandeStage()
- Remplacement new Random() par SecureRandom dans AuthService, OtpService, OtpController
- Extension AdminService.getStats() avec breakdowns par statut et données mensuelles
- Notifications email métier (candidature, rapport, stage) via EmailService
- Fix AdminController: type de retour Map<String,Object> pour getStats()
- Fix data.sql: compatibilité MariaDB (suppression IF EXISTS sur ALTER TABLE)
- Ajout spring.sql.init.continue-on-error=true
- Fix port MySQL 3307 -> 3306 (XAMPP)
- Fix JWT secret (suppression ChangeInProd)
- Fix CORS: ajout 127.0.0.1:5500 en plus de localhost:5500
- Ajout routes sécurité manquantes dans SecurityConfig (candidatures, encadrants, rapports, messagerie)
- Fix BOM UTF-8 supprimé des fichiers Java
- Enrichissement RapportStageDto avec etudiantPrenom séparé
- Collecteurs Java: remplacement Collectors.toList() par .toList() (Java 17)
- Suppression imports inutilisés (Collectors, File, InputStream, ResponseEntity, LocalDateTime)

Frontend:
- Migration localStorage -> sessionStorage pour isolation par onglet (multi-comptes)
- Correction toutes les URLs API erronées (candidatures, stages, rapports, notifications)
- Ajout fonctions API manquantes: CDC, Sprints, Tâches (30+ nouvelles fonctions)
- Correction champs prenom/nom -> firstName/lastName dans tous les dashboards
- Correction r.dateDepot -> r.dateSoumission, r.semaine -> r.semaineDebut
- Correction statuts rapports EN_ATTENTE -> SOUMIS
- Correction filterStages: ACTIF/PENDING -> EN