@@ -4,11 +4,12 @@ import com.smartintern.backend.dto.StageDto;
 import com.smartintern.backend.entity.*;
 import com.smartintern.backend.repository.*;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class StageService {
@@ -16,6 +17,7 @@ public class StageService {
     private final StageRepository stageRepository;
     private final CandidatureRepository candidatureRepository;
     private final UserRepository userRepository;
+    private final EmailService emailService;
 
     // ── Admin : créer un stage depuis une candidature acceptée ────────────────
     public StageDto.StageResponse creerDepuisCandidature(Long candidatureId) {
@@ -42,6 +44,20 @@ public class StageService {
                 .build();
 
         stageRepository.save(stage);
+
+        // Email de confirmation de stage à l'étudiant
+        try {
+            Etudiant etudiant = stage.getEtudiant();
+            String entrepriseNom = stage.getEntreprise() != null ? stage.getEntreprise().getNom() : "l'entreprise";
+            emailService.sendStageCreeeEmail(
+                etudiant.getEmail(), etudiant.getFirstName(), entrepriseNom,
+                stage.getDateDebut() != null ? stage.getDateDebut().toString() : "à définir",
+                stage.getDateFin()   != null ? stage.getDateFin().toString()   : "à définir"
+            );
+        } catch (Exception e) {
+            log.warn("Email stage non envoyé pour stage {}: {}", stage.getId(), e.getMessage());
+        }
+
         return toResponse(stage);
     }
 
@@ -55,11 +71,15 @@ public class StageService {
         if (request.getEncadrantAcademiqueId() != null) {
             User enc = userRepository.findById(request.getEncadrantAcademiqueId())
                     .orElseThrow(() -> new RuntimeException("Encadrant académique non trouvé"));
+            if (enc.getRole() != User.Role.ENCADRANT_ACADEMIQUE)
+                throw new RuntimeException("Cet utilisateur n'est pas un encadrant académique");
             stage.setEncadrantAcademique((EncadrantAcademique) enc);
         }
         if (request.getEncadrantEntrepriseId() != null) {
             User enc = userRepository.findById(request.getEncadrantEntrepriseId())
                     .orElseThrow(() -> new RuntimeException("Encadrant entreprise non trouvé"));
+            if (enc.getRole() != User.Role.ENCADRANT_ENTREPRISE)
+                throw new RuntimeException("Cet utilisateur n'est pas un encadrant entreprise");
             stage.setEncadrantEntreprise((EncadrantEntreprise) enc);
         }
 
@@ -74,7 +94,14 @@ public class StageService {
 
     // ── Admin : tous les stages ───────────────────────────────────────────────
     public List<StageDto.StageResponse> getAllStages() {
-        return stageRepository.findAll().stream().map(this::toResponse).collect(Collectors.toList());
+        return stageRepository.findAll().stream().map(this::toResponse).toList();
+    }
+
+    // ── Admin : détail d'un stage ─────────────────────────────────────────────
+    public StageDto.StageResponse getStageByIdDto(Long id) {
+        Stage stage = stageRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Stage non trouvé"));
+        return toResponse(stage);
     }
 
     // ── Étudiant : mon stage actuel ───────────────────────────────────────────
@@ -82,7 +109,7 @@ public class StageService {
         User user = userRepository.findByEmail(email)
                 .orElseThrow(() -> new RuntimeException("Utilisateur non trouvé"));
         return stageRepository.findByEtudiantId(user.getId())
-                .stream().map(this::toResponse).collect(Collectors.toList());
+                .stream().map(this::toResponse).toList();
     }
 
     // ── Encadrant académique : mes stagiaires ─────────────────────────────────
@@ -90,7 +117,7 @@ public class StageService {
         User user = userRepository.findByEmail(email)
                 .orElseThrow(() -> new RuntimeException("Utilisateur non trouvé"));
         return stageRepository.findByEncadrantAcademiqueId(user.getId())
-                .stream().map(this::toResponse).collect(Collectors.toList());
+                .stream().map(this::toResponse).toList();
     }
 
     // ── Encadrant entreprise : mes stagiaires ─────────────────────────────────
@@ -98,15 +125,26 @@ public class StageService {
         User user = userRepository.findByEmail(email)
                 .orElseThrow(() -> new RuntimeException("Utilisateur non trouvé"));
         return stageRepository.findByEncadrantEntrepriseId(user.getId())
-                .stream().map(this::toResponse).collect(Collectors.toList());
+                .stream().map(this::toResponse).toList();
+    }
+
+    // ── Entreprise : ses stages (via offres) ─────────────────────────────────
+    public List<StageDto.StageResponse> getStagesEntreprise(String email) {
+        User user = userRepository.findByEmail(email)
+                .orElseThrow(() -> new RuntimeException("Utilisateur non trouvé"));
+        return stageRepository.findByEntrepriseId(user.getId())
+                .stream().map(this::toResponse).toList();
     }
 
     // ── EN-06 : Entreprise signe la convention de stage ───────────────────────
     public StageDto.StageResponse signerConventionEntreprise(Long stageId, String email) {
         Stage stage = stageRepository.findById(stageId)
                 .orElseThrow(() -> new RuntimeException("Stage non trouvé"));
-        if (stage.getCandidature() == null
-                || !stage.getCandidature().getOffre().getCreateur().getEmail().equals(email)) {
+        if (stage.getCandidature() == null || stage.getCandidature().getOffre() == null) {
+            throw new RuntimeException("Candidature ou offre introuvable pour ce stage");
+        }
+        User createur = stage.getCandidature().getOffre().getCreateur();
+        if (createur == null || !createur.getEmail().equals(email)) {
             throw new RuntimeException("Non autorisé");
         }
         stage.setConventionSigneeEntreprise(true);
